filled mean values for empty in age

--- a/kaggle/Competitions/House Prices: Advanced Regression Techniques.ipynb
+++ b/kaggle/Competitions/House Prices: Advanced Regression Techniques.ipynb
@@ -2,6 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "data = pd.read_csv('/home/ash/train.csv')\n",
+    "scond = {0:'Dead',1:'Alive'}\n",
+    "# traversing through dataframe\n",
+    "# Gender column and writing\n",
+    "# values where key matches\n",
+    "data.Survived = [scond[item] for item in data.Survived]\n",
+    "\n",
+    "data.to_csv('/home/ash/wowwwow.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 63,
    "metadata": {},
    "outputs": [
